examples/test/testpolicy717.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy717
  namespace: namespace72
spec:
  podSelector:
    matchLabels:
      key18: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value20
          key10: value24
          key24: value38
      podSelector:
        matchLabels:
          key7: value16
          key20: value32
